# shower

./: .gitmodules  .travis.yml  README.md  cabal.project  shell.nix  shower.cabal
.github/workflows/: ci.yml  haskell-ci.yml
exe/: Main.hs
js/: LICENSE  Main.hs  README.md  cabal.project  index.html  shower-js.cabal
lib/: Shower.hs
lib/Shower/: Class.hs  Parser.hs  Printer.hs  Trace.hs
tests/: Main.hs  Property.hs
tests/in-out/: Basic.in  Basic.out  Commas.in  Commas.out  InfixConstructors.in  InfixConstructors.out  JSON.in  JSON.out  Lists.in  Lists.out  Literals.in  Literals.out  Misc.in  Misc.out  Suboptimal.in  Suboptimal.out  Time.out  Tuples.in  Tuples.out  TypeReps.in  TypeReps.out  UUIDs.out  Units.in  Units.out
