name: shower
version: 0.2.0.2
synopsis: Clean up the formatting of 'show' output
-- description:
license: BSD3
license-file: LICENSE
author: Vladislav Zavialov
maintainer: Monadfix <hi@monadfix.com>
category: Development
build-type: Simple
cabal-version: >=1.10

homepage: https://monadfix.com/shower
bug-reports: http://github.com/monadfix/shower/issues

extra-source-files:
  tests/in-out/*.in
  tests/in-out/*.out

source-repository head
  type: git
  location: git://github.com/monadfix/shower.git

library
  exposed-modules:
    Shower
    Shower.Printer
    Shower.Parser
    Shower.Class
  build-depends:
    base >=4.10 && <4.14,
    megaparsec,
    pretty
  hs-source-dirs: lib
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable shower
  main-is: Main.hs
  build-depends:
    base >=4.10 && <4.14,
    shower
  hs-source-dirs: exe
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite shower-tests
  main-is: Main.hs
  other-modules:
    Property
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.10 && <4.14,
    aeson,
    tasty,
    tasty-golden,
    tasty-quickcheck,
    QuickCheck,
    containers,
    unordered-containers,
    vector,
    text,
    filepath,
    directory,
    process,
    temporary,
    utf8-string,
    shower
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -Wno-missing-signatures
