cabal-version: 2.4
name: shower
version: 0.2.0.5
synopsis: Clean up the formatting of 'show' output
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Vladislav Zavialov
maintainer: Monadfix <hi@monadfix.com>
category: Development
build-type: Simple
tested-with: GHC ==8.4.4, GHC ==8.6.5, GHC ==8.8.4, GHC ==8.10.7, GHC ==9.0.2,
             GHC ==9.2.8, GHC ==9.4.8, GHC ==9.6.7, GHC ==9.8.4, GHC ==9.10.3,
             GHC ==9.12.4, GHC ==9.14.1

homepage: https://monadfix.com/shower
bug-reports: https://github.com/monadfix/shower/issues

extra-source-files:
  tests/in-out/*.in
  tests/in-out/*.out

source-repository head
  type: git
  location: git@github.com:monadfix/shower.git

library
  exposed-modules:
    Shower
    Shower.Trace
    Shower.Printer
    Shower.Parser
    Shower.Class
  build-depends:
    base >=4.10 && <4.23,
    megaparsec <9.8,
    pretty <1.2
  hs-source-dirs: lib
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable shower
  main-is: Main.hs
  build-depends:
    base,
    shower
  hs-source-dirs: exe
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite shower-tests
  main-is: Main.hs
  other-modules:
    Property
  type: exitcode-stdio-1.0
  build-depends:
    base,
    aeson,
    tasty,
    tasty-golden,
    tasty-quickcheck,
    QuickCheck,
    containers,
    vector,
    text,
    filepath,
    directory,
    process,
    temporary,
    utf8-string,
    shower
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -Wno-missing-signatures
