name: shower-js
version: 0.1
license: BSD3
license-file: LICENSE
author: Vladislav Zavialov
maintainer: Monadfix <hi@monadfix.com>
category: Development
build-type: Simple
cabal-version: >=1.10

data-files:
  index.html

executable shower-js
  main-is: Main.hs
  build-depends:
    base >=4.10 && <4.13,
    text,
    reflex,
    reflex-dom,
    shower
  default-language: Haskell2010
  ghc-options: -Wall -O2
